css/style.css
.ui.menu.fixed {
    background-color: #212121;
    height: 50px;
    box-shadow: none;
    border: none;
}

.locale-picker {
    position: absolute !important;
    right: 0;
    margin: 9px;
    height: 30px;
}

.locale-picker img {
    height: 30px!important;
}

.locale-picker .ui.dropdown .menu {
    border: none !important;
    box-shadow: none !important;
    background: none !important;
    margin-top: 0.5em !important;
}

.ui.menu .locale-picker .ui.dropdown .menu > .item {
    padding: 0 !important;
    height: 2em;
    margin: 0;
    margin-bottom: 0.5rem;
}

body {
    margin-top: 5em;
    height: auto;
    overflow-y: scroll !important;
    overflow-x: auto;
}

tr[data-tr-timestamp], tr[data-tr-mark] {
    user-select: none;
    -ms-user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

[data-tr-timestamp] .ui.label {
    padding-left: 6px;
    padding-right: 6px;
    min-width: 1em;
}

@media only screen and (max-width: 992px) {
    .paste-target {
        display: none;
    }
}

.paste-target {
    position: absolute;
    right: 2em;
    top: 5em;
    border: 3px #a9d1ce dashed;
    width: 8.5em;
    color: #5f827f;
    height: 8.5em;
    text-align: center;
    padding: 0.5em;
    pointer-events: none;
    display: flex;
    flex-direction: column;
}

.css-op-select-el {
    position: relative;
}

.css-op-select > .css-op-select-el::before {
    content: "\f00c";
    font-family: Icons;
    position: absolute;
    left: -1.5em;
    top: 0px;
}

.css-a-blank {
    color: white;
    text-decoration: none;
    line-height: 1 !important;
}

.detail-content span {
    font-size: 70%;
}

.css-b-bold b {
    font-weight: bold;
}

body.dimmed {
    overflow: hidden !important;
    margin-right: 17px !important;
}

#view-groupdetail .dropdown.text-full-width > .text {
    width: calc(100% - 2.5em);
}

#view-settings > .ui.basic.segment {
    padding: 0;
}

#modal-settings > .ui.basic.segment {
    padding: 0;
}

body.dimmed .menu {
    margin-right: 17px !important;
}

.text-purple {
    color: magenta;
    font-weight: bold;
}

.white {
    color: white !important;
}

.padding-none {
    padding: 0 !important;
}

.modals {
    overflow-y: scroll !important;
}

.modals.fade.out {
    overflow: hidden !important;
}

.text-white label, .text-white .header, .text-white a {
    color: white !important;
}

.glow:hover {
    color: red !important;
    cursor: pointer !important;
}

.glow-y:hover {
    color: darkgreen !important;
    cursor: pointer !important;
}

.nopad {
    padding-top: 1.0em !important;
}

.nopad > .column {
    padding: 0.25em !important;
}

.text-green {
    color: green !important;
}

.dropdown-container {
    overflow: visible !important;
    position: relative !important;
}

.detail-top {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 5em;
}

.detail-top h1.header {
    color: white;
    margin-top: 0;
    padding-left: 0.25em;
}

.title-active {
    color: orange !important;
}

.detail-timestamp {
    color: white;
    position: absolute;
    top: 1.25em;
    right: 2em;
}

.detail-identifier {
    color: white;
    position: absolute;
    top: 2.75em;
    right: 2em;
    opacity: 40%;
}

.detail-top img {
    height: 5em;
    padding-left: 1em;
}

.detail-content {
    margin-top: 4em;
    font-size: 1.25em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
}

.detail-entry {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    padding-top: 0.35em;
}

.detail-item {
    flex: 0 49%;
}

.detail-panel {
    flex: 0 33%;
    padding: 1em;
}

input:disabled {
    opacity: 1 !important;
}

#runes::placeholder {
    opacity: 1 !important;
    color: grey !important;
}

.muted {
    color: #505050 !important;
}

.margin-none-top {
    margin-top: 0 !important;
}

.margin-medium-top {
    margin-top: 1.0em !important;
}

.margin-medium-bottom {
    margin-bottom: 1.0em !important;
}

.css-small-row {
    padding-top: 0 !important;
    padding-bottom: 0.5em !important;
}

.css-template-buttons {
    height: 100% !important;
}

.css-template-list {
    margin-top: 1em !important;
}

.margin-none-bottom {
    margin-bottom: 0 !important;
}

.clickable {
    cursor: pointer !important;
}

.border-red {
    border-color: red !important;
}

.text-center {
    text-align: center !important;
}

.text-left {
    text-align: left !important;
}

.undertone {
    background-color: #F0F0F0 !important;
}

.attacker-special-state {
    border: 1px dashed purple !important;
}

.text-right {
    text-align: right !important;
}

.text-bold {
    font-weight: bold !important;
}

.border-red {
    border-color: red !important;
}

.border-right-thin {
    border-right: 1px solid black !important;
}

.border-top-thin {
    border-top: 1px solid black !important;
}

.border-bottom-thin {
    border-bottom: 1px solid black !important;
}

.border-right-false {
    border-right: 1px solid transparent !important;
}

.border-bottom-thick {
    border-bottom: 2px solid black !important;
    padding: 0 !important;
}

.border-bottom-thin {
    border-bottom: 1px solid black !important;
}

.table-group {
    text-align: center !important;
    font-family: 'Roboto', sans-serif !important;
    border-spacing: 0 !important;
    border-collapse: collapse !important;
    font-weight: 300 !important;
    font-size: 1.35em !important;
    color: #212529 !important;
    border: none !important;
}

.table-group td:not(.border-bottom-thick) {
    padding: 0.35em !important;
    border-top: none !important;
    border-left: none !important;
    height: 1.9em !important;
}

.table-group-secondary {
    table-layout: fixed !important;
}

.table-group td:not(.border-bottom-thick):not(.border-right-thin) {
    border: none !important;
}

.table-group span {
    font-size: 70% !important;
}

.foreground-green {
    color: #00c851 !important;
}

.foreground-red {
    color: #ff3547 !important;
}

[data-sortable] {
    position: relative;
}

[data-sortable] * {
    pointer-events: none;
}

[data-sortable]::before {
    transform: scale(0.7);
}

[data-sortable]::after {
    transform: scale(0.7);
}

[data-sortable="1"]::before {
    content: "\f0de";
    font-family: Icons;
    position: absolute;
    left: 1px;
    top: 3px;
}

[data-sortable="2"]::before {
    content: "\f0dd";
    font-family: Icons;
    position: absolute;
    left: 1px;
    bottom: 3px;
}

[data-sortable="1"]::after {
    content: attr(data-sortable-index);
    position: absolute;
    left: 1px;
    top: 33%;
}

[data-sortable="2"]::after {
    content: attr(data-sortable-index);
    position: absolute;
    left: 1px;
    top: 33%;
}

.modal i.cctemplate.close.icon {
    color: black;
    right: 0.5em;
    top: 0.5em;
    padding-top: 10px;
}

.ta-wrapper {
    position: relative;
    overflow: hidden;
    height: 100%;
}

.ta-form {
    height: 100%;
}

.ta-form .field {
    height: 100%;
}

.css-nomargin-grid > .row {
    padding: 0 !important;
    padding-bottom: 0.5em !important;
}

.ta-content {
    position: absolute;
    border: 1px solid transparent;
    pointer-events: none;
    color: black;
    width: 1000%;
    font-size: 1em !important;
    font-family: Arial, Helvetica, sans-serif !important;
}

.ta-area {
    color: transparent !important;
    caret-color: black;
    max-height: 100% !important;
    height: 100% !important;
    resize: none !important;
    overflow: auto;
    font-family: Arial, Helvetica, sans-serif !important;
}

.ta-area::selection {
    color: transparent;
}

.ta-keyword {
    text-shadow: -0.03ex 0 black, 0.03ex 0 black;
}

.ta-reserved {
    text-shadow: -0.03ex 0 #b300b3, 0.03ex 0 #b300b3;
    color: #b300b3;
}

.ta-reserved-protected {
    text-shadow: -0.03ex 0 #7132a8, 0.03ex 0 #7132a8;
    color: #7132a8;
}

.ta-reserved-private {
    text-shadow: -0.03ex 0 #3269a8, 0.03ex 0 #3269a8;
    color: #3269a8;
}

.ta-enum {
    text-shadow: -0.03ex 0 #a80032, 0.03ex 0 #a80032;
    color: #a80032;
}

.ta-reserved-special {
    text-shadow: -0.03ex 0 #a37500, 0.03ex 0 #a37500;
    color: #a37500;
}

.ta-reserved-scoped {
    text-shadow: -0.03ex 0 #3CB371, 0.03ex 0 #3CB371;
    color: #3CB371;
}

.ta-reserved-itemizable {
    text-shadow: -0.03ex 0 #eb4034, 0.03ex 0 #eb4034;
    color: #eb4034;
}

.ta-color {
    text-decoration: underline;
}

.ta-constant {
    color: #175e5a;
}

.ta-global {
    color: #1f58cc;
}

.ta-global-unfiltered {
    color: #6d1fcc;
}

.ta-function {
    text-shadow: -0.03ex 0 #175e5a, 0.03ex 0 #175e5a;
    color: #175e5a;
}

.ta-error {
    text-decoration: underline;
    text-decoration-color: red;
    text-decoration-style: dashed;
}

.ta-boolean-on {
    text-shadow: -0.03ex 0 green, 0.03ex 0 green;
    color: green;
}

.ta-boolean-off {
    text-shadow: -0.03ex 0 red, 0.03ex 0 red;
    color: red;
}

.ta-comment {
    color: #696969;
}

.ta-extras {
    position: relative;
}

.ta-extras span {
    color: #696969;
    font-size: 70%;
    position: absolute;
    left: 5px;
}

.ta-macro {
    background-color: #a8323240;
    text-shadow: -0.03ex 0 black, 0.03ex 0 black;
}

.ta-lambda {
    background-color: #f5a44230;
}

.padding-none {
    padding: 0;
}

.css-compact-grid .column {
    padding-top: 0.3em !important;
    padding-bottom: 0.3em !important;
}

.css-entry-opaque tr.css-entry:nth-child(even) {
    background-color: #7d7d7d3f;
}

.css-entry-opaque-image tr.css-entry:nth-child(4n+1) {
    background-color: #7d7d7d3f;
}

.opaque-rows tr:nth-child(even) {
    background-color: #7d7d7d3f;
}

.css-entry-lined tr.css-entry {
    border-bottom: 1px solid black;
}

.css-entry-thicklined tr.css-entry {
    border-bottom: 2px solid black;
}

.css-maxi-row tr.css-entry {
    height: 3em !important;
}

.css-small {
    font-size: 80%;
    margin-top: 0.1em;
}

.css-temporary {
    color: orange;
    position: absolute;
    font-size: 50%;
    top: 4em;
    width: 20em;
}

.ui.menu.css-menu {
    padding-right: 4rem;
}

.ui.menu.css-menu .item {
    color: white;
}

.ui.menu.css-menu a:hover {
    color: white;
}

.sf-margin.bottom-05 {
    margin-bottom: 0.5em;
}

.sf-margin.top-20 {
    margin-top: 2.0em;
}

.unity-loading {
    animation: opacity-pulse-full 2s infinite;
}

@keyframes opacity-pulse-full {
    0% {
        opacity: 100%;
    }
    50% {
        opacity: 0%;
    }
    100% {
        opacity: 100%
    }
}

/* Custom Toast */

.custom-toast {
    padding: 0 !important;
}

.custom-toast .header {
    display: inline-flex;
    align-items: center;
    padding-bottom: 0.25em;
    background-color: #141414;
    padding: 0.75em 0.75em;
    color: white !important;
    width: 100%;
    border-top-left-radius: .28571429rem;
    border-top-right-radius: .28571429rem;
    font-size: 1em !important;
}

.custom-toast .header i {
    font-size: 1em !important;
    margin-bottom: 2px;
}

.custom-toast .message {
    font-family: monospace;
    padding: 0.75em;
}

/* Dark Mode */

body.inverted {
    background-color: #141414;
}

